--- a/com.webproject/src/main/resources/templates/createprofile.html
+++ b/com.webproject/src/main/resources/templates/createprofile.html
@@ -31,7 +31,7 @@
         
       </form>
 		<div style="text-align:center" class="iLayer" id="idcopyright" title="%id%">	
-			<div class="iFooter">&copy;2015 Innovation At It Best</div>
+			<div class="iFooter">&copy;2015 Innovation At It's Best</div>
 		</div>
       
     </body>
