Adding code for login and other screens

--- a/com.webproject/src/main/resources/templates/createprofile.html
+++ b/com.webproject/src/main/resources/templates/createprofile.html
@@ -9,9 +9,9 @@
     </head>
     <body>
 
-      <form action="../hub/profile" method="post">
+      <form action="/hello" method="post">
       
-        <h1>Do Something New!</h1>
+        <h1>Do Something New1111</h1>
         
         <fieldset>
           <legend><span class="number">1</span>Information</legend>
