--- a/test/extcss.css
+++ b/test/extcss.css
@@ -50,7 +50,7 @@ select {
   outline: 0;
   padding: 6px;
   width: 100%;
-  background-color: #e8eeef;
+  background-color: #E0FFFF;
   color: #8a97a0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.03) inset;
   margin-bottom: 1px;
@@ -67,13 +67,13 @@ select {
 button {
   padding: 19px 39px 18px 39px;
   color: #FFF;
-  background-color: #FF6600;
+  background-color: #00FFFF;
   font-size: 18px;
   text-align: center;
   font-style: normal;
   border-radius: 5px;
   width: 100%;
-  border: 1px solid #FF6600;
+  border: 1px solid #00FFFF;
   border-width: 1px 1px 3px;
   box-shadow: 0 -1px 0 rgba(255, 255, 255, 0.1) inset;
   margin-bottom: 10px;
