Adding code for login and other screens

--- a/com.webproject/src/main/resources/web/page/css/listconnprofile.css
+++ b/com.webproject/src/main/resources/web/page/css/listconnprofile.css
@@ -23,7 +23,8 @@ h1, table { text-align: center; }
 
 table {border-collapse:collapse;  width: 100%; margin: 0 auto 0rem;}
 
-th, td { padding: 0.1rem; font-size: 0.1rem; }
+td { padding: 0.1rem; font-size: 0.1rem; }
+th { padding: 0.5rem; font-size: 0.9rem;}
 
 tr {background: hsl(90%, 50%, 80%); }
 
